# mcp-fabric-rest

./: .gitignore  AGENTS.md  CODEX_SETUP.md  Dockerfile  LICENSE  README.md  install_offline.ps1  pyproject.toml  requirements.txt  run_server.ps1
.github/workflows/: ci.yml
mcp_fabric/: __init__.py  main.py
mcp_fabric_rest/: __init__.py
tests/: test_main.py  test_routes.py  test_run_server.py  test_server.py
