[tool.poetry]
name = "mcp-fabric-rest"
version = "0.1.0"
description = "MCP Server for Microsoft Fabric REST APIs"
authors = ["Your Name <name@example.com>"]
packages = [{include = "mcp_fabric"}]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.scripts]
mcp-fabric-rest = "mcp_fabric.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
